--- a/eBook/04.4.md
+++ b/eBook/04.4.md
@@ -329,6 +329,8 @@ func m() {
    a := "O"
    print(a)
 }
+
+\\ answer: GOG
 ```
 
 练习 4.2 [global_scope.go](examples/chapter_4/global_scope.go):
@@ -352,6 +354,8 @@ func m() {
    a = "O"
    print(a)
 }
+
+\\ answer: GOO
 ```
 
 练习 4.3 [function_calls_function.go](examples/chapter_4/function_calls_function.go)
@@ -376,6 +380,8 @@ func f1() {
 func f2() {
    print(a)
 }
+
+\\ answer: GOG
 ```
 
 ## 链接
