--- a/eBook/04.4.md
+++ b/eBook/04.4.md
@@ -330,7 +330,7 @@ func m() {
    print(a)
 }
 
-\\ answer: GOG
+// answer: GOG
 ```
 
 练习 4.2 [global_scope.go](examples/chapter_4/global_scope.go):
@@ -355,7 +355,7 @@ func m() {
    print(a)
 }
 
-\\ answer: GOO
+// answer: GOO
 ```
 
 练习 4.3 [function_calls_function.go](examples/chapter_4/function_calls_function.go)
@@ -381,7 +381,7 @@ func f2() {
    print(a)
 }
 
-\\ answer: GOG
+// answer: GOG
 ```
 
 ## 链接
