--- a/eBook/05.4.md
+++ b/eBook/05.4.md
@@ -131,6 +131,17 @@ func main() {
 **练习 5.4** [for_loop.go](exercises/chapter_5/for_loop.go)
 
 1. 使用 for 结构创建一个简单的循环。要求循环 15 次然后使用 fmt 包来打印计数器的值。
+```go
+package main
+  
+import "fmt"
+
+func main() {
+    for i := 0; i < 15; i++ {
+        fmt.Println(i+1)
+    }
+}
+```
 2. 使用 goto 语句重写循环，要求不能使用 for 关键字。
 
 **练习 5.5** [for_character.go](exercises/chapter_5/for_character.go)
@@ -145,7 +156,35 @@ func main() {
 	GGGGGG
 
 1. 使用 2 层嵌套 for 循环。
+```go
+package main
+  
+import "fmt"
+
+func main() {
+    for i := 0; i < 25; i++ {
+        for j := 0; j < (i + 1); j++ {
+            print("G")
+        }
+        
+        fmt.Println()
+    }
+}
+```
 2. 仅用 1 层 for 循环以及字符串连接。
+```go
+package main
+  
+import "fmt"
+
+func main() {
+    str := "G"
+    for i := 0; i < 25; i++ {
+        fmt.Println(str)
+        str += "G"
+    } 
+}
+```
 
 **练习 5.6** [bitwise_complement.go](exercises/chapter_5/bitwise_complement.go)
 
@@ -154,10 +193,43 @@ func main() {
 **练习 5.7** Fizz-Buzz 问题：[fizzbuzz.go](exercises/chapter_5/fizzbuzz.go)
 
 写一个从 1 打印到 100 的程序，但是每当遇到 3 的倍数时，不打印相应的数字，但打印一次 "Fizz"。遇到 5 的倍数时，打印 `Buzz` 而不是相应的数字。对于同时为 3 和 5 的倍数的数，打印 `FizzBuzz`（提示：使用 switch 语句）。
+```go
+package main
+  
+import "fmt"
+
+func main() {
+    for i := 1; i <= 100; i++ {
+        switch {
+            case (i % 3 == 0) && (i % 5 == 0):
+                fmt.Println("FizzBuzz")
+            case i % 3 == 0:
+                fmt.Println("Fizz")
+            case i % 5 == 0:
+                fmt.Println("Buzz")
+        }
+    }
+}
+```
 
 **练习 5.8** [rectangle_stars.go](exercises/chapter_5/rectangle_stars.go)
 
 使用 `*` 符号打印宽为 20，高为 10 的矩形。
+```go
+package main
+  
+import "fmt"
+
+func main() {
+    for i := 0; i < 10; i++ {
+        if (i == 0) || (i == 9) {
+            fmt.Println("********************")
+        } else{
+            fmt.Println("*                  *")
+        }
+    }
+}
+```
 
 ## 5.4.2 基于条件判断的迭代
 
@@ -323,6 +395,7 @@ for i := 0; i < 5; i++ {
 	fmt.Printf("%d ", v)
 	v = 5
 }
+// anwser: 0  0  0  0  0  
 ```
 
 **问题 5.2：** 请描述以下 for 循环的输出结果：
@@ -333,6 +406,7 @@ for i := 0; i < 5; i++ {
 for i := 0; ; i++ {
 	fmt.Println("Value of i is now:", i)
 }
+// answer: endless loop
 ```
 
 2.
@@ -341,6 +415,8 @@ for i := 0; ; i++ {
 for i := 0; i < 3; {
 	fmt.Println("Value of i:", i)
 }
+
+\\ anwser: 0 0 0 0 ...
 ```
 
 3.
@@ -351,6 +427,7 @@ for ; s != "aaaaa"; {
 	fmt.Println("Value of s:", s)
 	s = s + "a"
 }
+\\anwser:  , a, aa, aaa, aaaa
 ```
 
 4.
@@ -360,6 +437,9 @@ for i, j, s := 0, 5, "a"; i < 3 && j < 100 && s != "aaaaa"; i, j,
 	s = i+1, j+1, s + "a" {
 	fmt.Println("Value of i, j, s:", i, j, s)
 }
+\\ anwser: 0 5 "a"
+\\         1 6 "aa"
+\\         2 7 "aaa"
 ```
 
 ## 链接
