--- a/eBook/05.4.md
+++ b/eBook/05.4.md
@@ -416,7 +416,7 @@ for i := 0; i < 3; {
 	fmt.Println("Value of i:", i)
 }
 
-\\ anwser: 0 0 0 0 ...
+// anwser: 0 0 0 0 ...
 ```
 
 3.
@@ -427,7 +427,7 @@ for ; s != "aaaaa"; {
 	fmt.Println("Value of s:", s)
 	s = s + "a"
 }
-\\anwser:  , a, aa, aaa, aaaa
+// anwser:  , a, aa, aaa, aaaa
 ```
 
 4.
@@ -437,9 +437,9 @@ for i, j, s := 0, 5, "a"; i < 3 && j < 100 && s != "aaaaa"; i, j,
 	s = i+1, j+1, s + "a" {
 	fmt.Println("Value of i, j, s:", i, j, s)
 }
-\\ anwser: 0 5 "a"
-\\         1 6 "aa"
-\\         2 7 "aaa"
+// anwser: 0 5 "a"
+//         1 6 "aa"
+//         2 7 "aaa"
 ```
 
 ## 链接
