--- a/eBook/05.6.md
+++ b/eBook/05.6.md
@@ -90,6 +90,10 @@ for { //since there are no checks, this is an infinite loop
 	i++
 }
 fmt.Println("A statement just after for loop.")
+// anwser: Value of i is:  0
+//         Value of i is:  1
+//         Value of i is:  2
+//         A statement just after for loop.
 ```
 
 2.
@@ -99,6 +103,7 @@ for i := 0; i<7 ; i++ {
 	if i%2 == 0 { continue }
 	fmt.Println("Odd:", i)
 }
+// anwser: 1 3 5
 ```
 
 ## 链接
