--- a/eBook/06.2.md
+++ b/eBook/06.2.md
@@ -139,9 +139,57 @@ func getX2AndX3_2(input int) (x2 int, x3 int) {
 
 编写一个函数，接收两个整数，然后返回它们的和、积与差。编写两个版本，一个是非命名返回值，一个是命名返回值。
 
+```go
+package main
+  
+import "fmt"
+
+func main() {
+    num1, num2 := 3, 4
+    a, b, c := getValue(num1, num2)
+    fmt.Println(a, b, c)
+}
+
+func getValue(num1 int, num2 int) (sum int, mult int, subs int) {
+    sum = num1 + num2
+    mult = num1 * num2
+    subs = num1 - num2
+    return
+}
+```
+
 练习 6.2 [error_returnval.go](exercises/chapter_6/error_returnval.go)
 
 编写一个名字为 MySqrt 的函数，计算一个 float64 类型浮点数的平方根，如果参数是一个负数的话将返回一个错误。编写两个版本，一个是非命名返回值，一个是命名返回值。
+
+```go
+package main
+  
+import "math"
+import "fmt"
+import "errors"
+
+func main() {
+    num := 3.6
+    var res, _ = MySqrt(num)
+    fmt.Println(res)
+
+    var num1 = -1.
+    var res2, err = MySqrt(num1)
+    if err != nil {
+        fmt.Println("Error")
+    }else{
+        fmt.Println(res2)
+    }
+}
+
+func MySqrt(num float64) (float64, error) {
+    if num < 0 {
+        return float64(math.NaN()), errors.New("I won't be able to do a sqrt of negative number!")
+    }
+    return math.Sqrt(num), nil
+}
+```
 
 ## 6.2.3 空白符（blank identifier）
 
